[package]
name = "ppp"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
notify-rust = "4.11.7"
shlex = "1.3.0"
zbus = { version = "5.12.0", default-features = false }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = false
